[package]
name = "quic-benchmark"
publish = false
version = "1.0.0"
edition = "2021"

[dependencies]
anyhow = "1.0.22"
quinn = "0.11.6"
rand = "0.9.0"
rcgen = "0.13"
rustls = "0.23.22"
rustls-pemfile = "2.2.0"
structopt = { version = "0.3", default-features = false }
tokio = { version = "1", features = ["full"] }
tracing = "0.1.10"
tracing-subscriber = "0.3.0"

